# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  alembic.ini  docker-compose.yml  generate_openapi.py  openapi.json  pyproject.toml
.claude/agents/: billing-sync.md  feature-scaffold.md  multi-tenant-guard-checker.md  rbac-auditor.md  test-coverage-gap.md
.claude/skills/e2e/: SKILL.md
.claude/skills/localize/: SKILL.md
.claude/skills/migration/: SKILL.md
.claude/skills/seed/: SKILL.md
.claude/skills/test-focus/: SKILL.md
alembic/: env.py
alembic/versions/: 2025_05_29_1530-f03dd38e5cee.py  2025_06_02_0002-b7418225919f_create_user_table.py  2025_06_14_1908-ae8cb2a857ff_initial_commit.py
backend/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  coverage.json  generate_openapi.py  locustfile.py  openapi.json  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2025_06_22_1558-2c3b2ee136dc_create_schema.py  2025_06_22_1558-2c3b2ee136dc_initial_commit.py  2025_06_22_1558-2c3b2ee136dc_initial_schema.py  2025_11_12_2238-eb0b5f48f903_add_company_table.py  2026_03_18_2248-6a1fe3e715b9_add_refresh_token_table.py  2026_03_23_0000-eb4bff51218c_add_unique_constraints.py  2026_03_23_0001-a1b2c3d4e5f6_seed_permissions.py  2026_03_29_0001-b1c2d3e4f5a6_add_billing_tables.py  2026_04_05_0001-c3d4e5f6a7b8_add_email_verification_token.py  2026_04_05_0001-c3d4e5f6a7b8_add_token_tables.py
backend/scripts/: format.sh  lint.sh
backend/src/: enums.py  init_db.py  main.py
backend/src/billing/: __init__.py  abc.py  dependencies.py  stripe_provider.py  types.py
backend/src/core/: config.py  context.py  database.py  dependencies.py  exceptions.py  limiter.py  logging.py  middlewares.py  security.py  template.py
backend/src/models/: __init__.py  api_token.py  audit_log.py  billing.py  company.py  email_verification_token.py  invite_token.py  mixins.py  organization.py  password_reset_token.py  permission.py  refresh_token.py  role.py  tenant.py  user.py  user_organization.py  user_tenant.py
backend/src/repositories/: abc.py  api_token.py  audit_log.py  base.py  billing.py  company.py  email_verification_token.py  invite_token.py  organization.py  permission.py  refresh_token.py  repository_manager.py  role.py  tenant.py  user.py  user_organization.py  user_tenant.py  utils.py
backend/src/routers/: admin.py  api_token.py  audit_log.py  auth.py  billing.py  company.py  organization.py  permission.py  query_options.py  role.py  tenant.py  user.py
backend/src/schemas/: admin.py  api_token.py  audit_log.py  billing.py  common.py  company.py  organization.py  permission.py  role.py  tenant.py  types.py  user.py
backend/src/services/: admin.py  api_token.py  audit_log.py  auth.py  base.py  billing.py  company.py  gdpr.py  organization.py  permission.py  role.py  tenant.py  user.py  utils.py
backend/src/templates/emails/: account-deletion.html  added-to-org.html  invite-user.html  new-user.html  payment-action-required.html  payment-failed.html  reset-password.html  subscription-paused.html  subscription-resumed.html  trial-ended.html  trial-ending.html  verify-email.html  welcome.html
backend/src/templates/emails/src/: account-deletion.mjml  invite-user.mjml  new-user.mjml  payment-action-required.mjml  payment-failed.mjml  reset-password.mjml  subscription-paused.mjml  subscription-resumed.mjml  trial-ended.mjml  trial-ending.mjml  verify-email.mjml  welcome.mjml
backend/tests/: conftest.py  utils.py
backend/tests/api/: test_admin.py  test_api_token.py  test_audit_log.py  test_auth.py  test_billing_plans.py  test_billing_subscriptions.py  test_billing_usage.py  test_billing_webhook.py  test_company.py  test_gdpr.py  test_multi_organization.py  test_multi_tenant.py  test_organization.py  test_organization_isolation.py  test_permission.py  test_role.py  test_tenant.py  test_tenant_isolation.py  test_user.py
backend/tests/unit/: test_api_token_service.py  test_audit_log_service.py  test_auth_service.py  test_base_repo_and_service.py  test_billing_repositories.py  test_billing_service.py  test_edge_cases.py  test_gdpr.py  test_organization_service.py  test_query_options.py  test_role_permission_service.py  test_services_utils.py  test_stripe_provider.py  test_user_service.py
frontend/: .gitignore  .prettierrc  CLAUDE.md  Dockerfile.dev  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
frontend/src/: App.vue  auto-imports.d.ts  components.d.ts  constants.ts  main.ts  typed-router.d.ts  utils.ts
frontend/src/api/: admin.ts  apiTokens.ts  auditLogs.ts  auth.ts  billing.ts  client.ts  gdpr.ts  organizations.ts  permissions.ts  roles.ts  tenants.ts  users.ts
frontend/src/apis/: auth.ts  base.ts  roles.ts  (+3 more)
src/: main.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middlewares.py  security.py
src/models/: __init__.py  auth.py  mixins.py  permission.py  role.py  user.py
src/repositories/: auth.py  base.py  permission.py  repository_manager.py  resource.py  role.py  user.py  utils.py
src/routers/: auth.py  permission.py  query_options.py  role.py  user.py
src/schemas/: auth.py  common.py  user.py  utils.py
src/services/: auth.py  base.py  permission.py  role.py  user.py
tests/: conftest.py
tests/api/: test_auth.py  test_permission.py  test_role.py  test_user.py
(+174 files in other folders)
