[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "alembic>=1.18.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
    "psycopg-binary>=3.3.2",
    "psycopg>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "aiosqlite>=0.22.1",
    "itsdangerous>=2.2.0",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "locust>=2.43.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.similarities]
min-similarity-lines=7

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-function-docstring,missing-class-docstring,missing-module-docstring"
