[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "alembic>=1.18.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.40.0",
    "psycopg-binary>=3.3.2",
    "psycopg>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "aiosqlite>=0.22.1",
    "itsdangerous>=2.2.0",
    "argon2-cffi>=25.1.0",
    "slowapi>=0.1.9",
    "stripe>=15.0.0",
    "disposable-email-domains>=0.0.181",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "locust>=2.43.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]

[tool.ruff]
exclude = ["src/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "ASYNC", "RUF"]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["src/templates"]

[tool.coverage.run]
source = ["src"]
omit = ["src/templates/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
